flex(exercise 2): Fix spacing

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,4 +1,8 @@
-.header  {
+.header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
   font-family: monospace;
   background: papayawhip;
 }
@@ -22,4 +26,11 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+ul {
+  display: flex;
+  gap: 8px;
+  margin: 0;
+  padding: 0;
 }
